Updating results endpoints
